[package]
name = "rust-nvd-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Transforming Defense"]
description = "A fast, local-first vulnerability scanner that checks SBOMs against the NVD with AI-powered analysis"
license = "MIT"
repository = "https://github.com/scherrie-td/rust-nvd-scanner.git"
readme = "README.md"
keywords = ["security", "vulnerability", "cve", "sbom", "nvd"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
directories = "5.0"